@@ -1,7 +1,7 @@
 ;;; url-file.el --- File retrieval code
 
-;; Copyright (C) 1996, 1997, 1998, 1999, 2004,
-;;   2005, 2006, 2007, 2008, 2009 Free Software Foundation, Inc.
+;; Copyright (C) 1996, 1997, 1998, 1999, 2004, 2005, 2006, 2007, 2008,
+;;   2009  Free Software Foundation, Inc.
 
 ;; Keywords: comm, data, processes
 
@@ -105,8 +105,7 @@ to them."
 	 (file (url-unhex-string (url-filename url)))
 	 (filename (if (or user (not (url-file-host-is-local-p host)))
 		       (concat "/" (or user "anonymous") "@" site ":" file)
-		     (if (and (memq system-type
-				    '(emx ms-dos windows-nt ms-windows))
+		     (if (and (memq system-type '(ms-dos windows-nt))
 			      (string-match "^/[a-zA-Z]:/" file))
 			 (substring file 1)
 		       file)))
